force-app/main/default/objects/AM_Oportunidad__c/AM_Oportunidad__c.object-meta.xml
<CustomObject>
    <label>Cotización</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Consecutivo</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cotizaciones</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>