force-app/main/default/objects/AM_Oportunidad__c/fields/AM_Accesorio_2__c.field-meta.xml
<CustomField>
    <fullName>AM_Accesorio_2__c</fullName>
    <label>Accesorio 2</label>
    <length>50</length>
    <type>Text</type>
</CustomField>