force-app/main/default/objects/AM_Oportunidad__c/fields/AM_Accesorio_3__c.field-meta.xml
<CustomField>
    <fullName>AM_Accesorio_3__c</fullName>
    <label>Accesorio 3</label>
    <length>50</length>
    <type>Text</type>
</CustomField>