force-app/main/default/objects/AM_Oportunidad__c/fields/AM_Agencia_propietario__c.field-meta.xml
<CustomField>
    <fullName>AM_Agencia_propietario__c</fullName>
    <description>Agencia del propietario de la oportunidad.</description>
    <formula>IF(ISBLANK(TEXT(Owner:User.AM_Agencia__c)), TEXT(AM_Vitrina_2_Renting__c), TEXT(Owner:User.AM_Agencia__c)
)</formula>
    <label>Vitrina</label>
    <type>Text</type>
</CustomField>