force-app/main/default/objects/AM_Oportunidad__c/fields/AM_Ano_modelo__c.field-meta.xml
<CustomField>
    <fullName>AM_Ano_modelo__c</fullName>
    <formula>IF(TEXT( AM_Tipo_de_cotizacion__c ) &lt;&gt; &quot;Usados&quot;, AM_Modelo_de_interes__r.AM_Ano__c, 0000)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Año modelo</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>