force-app/main/default/objects/AM_Oportunidad__c/fields/AM_Ano_modelo_sugerido__c.field-meta.xml
<CustomField>
    <fullName>AM_Ano_modelo_sugerido__c</fullName>
    <formula>AM_Modelo_sugerido_1__r.AM_Ano__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Año modelo</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>