force-app/main/default/objects/AM_Oportunidad__c/fields/AM_Cambio_su_HONDA_actual__c.field-meta.xml
<CustomField>
    <fullName>AM_Cambio_su_HONDA_actual__c</fullName>
    <label>¿Cambio su HONDA actual?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SI</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>