force-app/main/default/objects/AM_Oportunidad__c/fields/AM_Canal_de_atencion__c.field-meta.xml
<CustomField>
    <fullName>AM_Canal_de_atencion__c</fullName>
    <label>Como se entero de la marca</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aviso de prensa</fullName>
            </value>
            <value>
                <fullName>Cuña Radio</fullName>
            </value>
            <value>
                <fullName>Comercial de T.V.</fullName>
            </value>
            <value>
                <fullName>Línea Honda</fullName>
                <label>Línea Honda #470</label>
            </value>
            <value>
                <fullName>Aviso de revista</fullName>
            </value>
            <value>
                <fullName>Correo directo</fullName>
            </value>
            <value>
                <fullName>Pagina Web</fullName>
            </value>
            <value>
                <fullName>Evento en Vitrina</fullName>
            </value>
            <value>
                <fullName>Evento Fuera de Vitrina</fullName>
            </value>
            <value>
                <fullName>Taller de servicio</fullName>
            </value>
            <value>
                <fullName>E-mail</fullName>
            </value>
            <value>
                <fullName>Referido</fullName>
            </value>
            <value>
                <fullName>Volantes</fullName>
            </value>
            <value>
                <fullName>Valla o pasacalle</fullName>
            </value>
            <value>
                <fullName>Pauta digital</fullName>
            </value>
            <value>
                <fullName>Trabajo Bases de Datos CH</fullName>
            </value>
            <value>
                <fullName>Trabajo Bases de Datos CNHC</fullName>
            </value>
            <value>
                <fullName>Publicidad de vitrina</fullName>
            </value>
            <value>
                <fullName>Vehículo rodando en la calle</fullName>
            </value>
            <value>
                <fullName>Registro histórico</fullName>
            </value>
            <value>
                <fullName>Best Drive</fullName>
                <isActive>false</isActive>
                <label>Best Drive</label>
            </value>
            <value>
                <fullName>Cliente Honda</fullName>
                <isActive>false</isActive>
                <label>Cliente Honda</label>
            </value>
            <value>
                <fullName>Contac Center</fullName>
                <isActive>false</isActive>
                <label>Contac Center</label>
            </value>
            <value>
                <fullName>Directorio telefonico</fullName>
                <isActive>false</isActive>
                <label>Directorio telefonico</label>
            </value>
            <value>
                <fullName>Gerenciamiento de clientes</fullName>
                <isActive>false</isActive>
                <label>Gerenciamiento de clientes</label>
            </value>
            <value>
                <fullName>Otro</fullName>
                <isActive>false</isActive>
                <label>Otro</label>
            </value>
            <value>
                <fullName>Paso por el concesionario</fullName>
                <isActive>false</isActive>
                <label>Paso por el concesionario</label>
            </value>
            <value>
                <fullName>Redes sociales</fullName>
                <isActive>false</isActive>
                <label>Redes sociales</label>
            </value>
            <value>
                <fullName>Telemercadeo</fullName>
                <isActive>false</isActive>
                <label>Telemercadeo</label>
            </value>
            <value>
                <fullName>Venta corporativa</fullName>
                <isActive>false</isActive>
                <label>Venta corporativa</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>