force-app/main/default/objects/AM_Oportunidad__c/fields/AM_Cantidad__c.field-meta.xml
<CustomField>
    <fullName>AM_Cantidad__c</fullName>
    <defaultValue>1</defaultValue>
    <inlineHelpText>Cantidad de unidades solicitadas por el cliente</inlineHelpText>
    <label>Cantidad</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>