force-app/main/default/objects/AM_Oportunidad__c/fields/AM_Casco__c.field-meta.xml
<CustomField>
    <fullName>AM_Casco__c</fullName>
    <description>En este campo se debe registrar el valor de los accesorio en caso de aplicar.</description>
    <inlineHelpText>En este campo se debe registrar el valor de los accesorio en caso de aplicar. &quot;Este valor es unicamente informativo&quot;</inlineHelpText>
    <label>Casco</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>