force-app/main/default/objects/AM_Oportunidad__c/fields/AM_Categoria_de_trafico__c.field-meta.xml
<CustomField>
    <fullName>AM_Categoria_de_trafico__c</fullName>
    <label>Categoria de trafico</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Comunicación ATL</fullName>
            </value>
            <value>
                <fullName>Comunicación BTL</fullName>
            </value>
            <value>
                <fullName>Comunicación Digital</fullName>
            </value>
            <value>
                <fullName>Gerenciamiento de Clientes</fullName>
            </value>
            <value>
                <fullName>Otros</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>