force-app/main/default/objects/AM_Oportunidad__c/fields/AM_Ciudad_entrega__c.field-meta.xml
<CustomField>
    <fullName>AM_Ciudad_entrega__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Ciudad entrega</description>
    <inlineHelpText>Ciudad entrega</inlineHelpText>
    <label>Ciudad entrega</label>
    <referenceTo>AM_Municipio__c</referenceTo>
    <relationshipLabel>Cotizaciones</relationshipLabel>
    <relationshipName>Cotizaciones</relationshipName>
    <type>Lookup</type>
</CustomField>