force-app/main/default/objects/AM_Oportunidad__c/fields/AM_Ciudad_propietario__c.field-meta.xml
<CustomField>
    <fullName>AM_Ciudad_propietario__c</fullName>
    <formula>Owner:User.City</formula>
    <label>Ciudad propietario</label>
    <type>Text</type>
</CustomField>