force-app/main/default/objects/AM_Oportunidad__c/fields/AM_Cliente_pensionado__c.field-meta.xml
<CustomField>
    <fullName>AM_Cliente_pensionado__c</fullName>
    <label>¿Desea incluir el seguro de desempleo?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Si</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>