force-app/main/default/objects/AM_Oportunidad__c/fields/AM_Color__c.field-meta.xml
<CustomField>
    <fullName>AM_Color__c</fullName>
    <label>Color opc 1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ACERO MODERNO</fullName>
            </value>
            <value>
                <fullName>AMATISTA METÁLICO</fullName>
            </value>
            <value>
                <fullName>AZUL</fullName>
            </value>
            <value>
                <fullName>AZUL BRILLANTE</fullName>
            </value>
            <value>
                <fullName>AZUL OBSIDIAN</fullName>
            </value>
            <value>
                <fullName>AZUL SPORT</fullName>
            </value>
            <value>
                <fullName>BLANCO</fullName>
            </value>
            <value>
                <fullName>BLANCO DIAMANTE</fullName>
            </value>
            <value>
                <fullName>BLANCO ORQUÍDEA</fullName>
            </value>
            <value>
                <fullName>BLANCO PERLA ANDES</fullName>
            </value>
            <value>
                <fullName>BLANCO PLATINO</fullName>
            </value>
            <value>
                <fullName>CHAMPAÑA</fullName>
            </value>
            <value>
                <fullName>GRIS</fullName>
            </value>
            <value>
                <fullName>GRIS METÁLICO</fullName>
            </value>
            <value>
                <fullName>NEGRO</fullName>
            </value>
            <value>
                <fullName>NEGRO CRISTAL</fullName>
            </value>
            <value>
                <fullName>NEGRO CRISTAL.</fullName>
            </value>
            <value>
                <fullName>PLATA ALABASTER</fullName>
            </value>
            <value>
                <fullName>PLATA LUNAR</fullName>
            </value>
            <value>
                <fullName>PLATEADO</fullName>
            </value>
            <value>
                <fullName>ROJO</fullName>
            </value>
            <value>
                <fullName>ROJO DÍNAMO</fullName>
            </value>
            <value>
                <fullName>ROJO MILANO</fullName>
            </value>
            <value>
                <fullName>ROJO PASIÓN</fullName>
            </value>
            <value>
                <fullName>ROJO RALLYE</fullName>
            </value>
            <value>
                <fullName>SHORELINA</fullName>
            </value>
            <value>
                <fullName>TITANIO METALICO</fullName>
            </value>
            <value>
                <fullName>ROJO INTENSO</fullName>
            </value>
            <value>
                <fullName>BLANCO TAFFETA</fullName>
            </value>
            <value>
                <fullName>ROJO RADIANTE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>