force-app/main/default/objects/AM_Oportunidad__c/fields/AM_Color_opc_2_sugerido__c.field-meta.xml
<CustomField>
    <fullName>AM_Color_opc_2_sugerido__c</fullName>
    <label>Color opc 2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NEGRO CRISTAL</fullName>
            </value>
            <value>
                <fullName>ACERO MODERNO</fullName>
            </value>
            <value>
                <fullName>BLANCO ORQUÍDEA</fullName>
            </value>
            <value>
                <fullName>PLATA LUNAR</fullName>
            </value>
            <value>
                <fullName>ROJO MILANO</fullName>
            </value>
            <value>
                <fullName>AZUL SPORT</fullName>
            </value>
            <value>
                <fullName>AZUL OBSIDIAN</fullName>
            </value>
            <value>
                <fullName>BLANCO DIAMANTE</fullName>
            </value>
            <value>
                <fullName>GRIS METÁLICO</fullName>
            </value>
            <value>
                <fullName>ROJO PASIÓN</fullName>
            </value>
            <value>
                <fullName>BLANCO PERLA ANDES</fullName>
            </value>
            <value>
                <fullName>ROJO DÍNAMO</fullName>
            </value>
            <value>
                <fullName>BLANCO PLATINO</fullName>
            </value>
            <value>
                <fullName>CHAMPAÑA</fullName>
            </value>
            <value>
                <fullName>AMATISTA METÁLICO</fullName>
            </value>
            <value>
                <fullName>SHORELINA</fullName>
            </value>
            <value>
                <fullName>AZUL OCEANO</fullName>
                <isActive>false</isActive>
                <label>AZUL OCEANO</label>
            </value>
            <value>
                <fullName>BLANCO TAFFETA</fullName>
                <isActive>false</isActive>
                <label>BLANCO TAFFETA</label>
            </value>
            <value>
                <fullName>TITANIO METALICO</fullName>
                <isActive>false</isActive>
                <label>TITANIO METALICO</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>