force-app/main/default/objects/AM_Oportunidad__c/fields/AM_Comentario_seguimiento_Gerente__c.field-meta.xml
<CustomField>
    <fullName>AM_Comentario_seguimiento_Gerente__c</fullName>
    <inlineHelpText>Comentario de seguimiento del gerente</inlineHelpText>
    <label>Comentario seguimiento Gerente</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>