force-app/main/default/objects/AM_Oportunidad__c/fields/AM_Como_es_su_comportamiento__c.field-meta.xml
<CustomField>
    <fullName>AM_Como_es_su_comportamiento__c</fullName>
    <label>Cómo es su comportamiento(DISC)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dominante</fullName>
            </value>
            <value>
                <fullName>Interactivo</fullName>
            </value>
            <value>
                <fullName>Seguro</fullName>
            </value>
            <value>
                <fullName>Cauteloso</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>