force-app/main/default/objects/AM_Oportunidad__c/fields/AM_Concesionario__c.field-meta.xml
<CustomField>
    <fullName>AM_Concesionario__c</fullName>
    <label>Concesionario</label>
    <length>50</length>
    <type>Text</type>
</CustomField>