force-app/main/default/objects/AM_Oportunidad__c/fields/AM_Concesionario_Propietario__c.field-meta.xml
<CustomField>
    <fullName>AM_Concesionario_Propietario__c</fullName>
    <description>Concesionario correspondiente al propietario de la oportunidad.</description>
    <formula>TEXT(Owner:User.AM_Concesionario__c)</formula>
    <label>Agencia</label>
    <type>Text</type>
</CustomField>