force-app/main/default/objects/AM_Oportunidad__c/fields/AM_Correo_electronico_enviar_cotizacion__c.field-meta.xml
<CustomField>
    <fullName>AM_Correo_electronico_enviar_cotizacion__c</fullName>
    <description>Dirección de correo electrónico del usuario de la motocicleta para enviar la cotización.</description>
    <label>Correo electrónico enviar cotización</label>
    <type>Email</type>
</CustomField>