force-app/main/default/objects/AM_Oportunidad__c/fields/AM_Cotizacion_VTEK__c.field-meta.xml
<CustomField>
    <fullName>AM_Cotizacion_VTEK__c</fullName>
    <label>Cotización VTEK</label>
    <length>10</length>
    <type>Text</type>
</CustomField>