force-app/main/default/objects/AM_Oportunidad__c/fields/AM_Cual_es_el_estilo_de_vida__c.field-meta.xml
<CustomField>
    <fullName>AM_Cual_es_el_estilo_de_vida__c</fullName>
    <label>¿Cual es el estilo de vida?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Practico</fullName>
            </value>
            <value>
                <fullName>Critico</fullName>
            </value>
            <value>
                <fullName>Soñador</fullName>
            </value>
            <value>
                <fullName>Vanidoso</fullName>
            </value>
            <value>
                <fullName>Seguro</fullName>
            </value>
            <value>
                <fullName>Interactivo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>