force-app/main/default/objects/AM_Oportunidad__c/fields/AM_Cuantos_Honda_ha_adquirido_la_empresa__c.field-meta.xml
<CustomField>
    <fullName>AM_Cuantos_Honda_ha_adquirido_la_empresa__c</fullName>
    <label>Cuantos Honda ha adquirido la empresa</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1er.</fullName>
            </value>
            <value>
                <fullName>2do</fullName>
            </value>
            <value>
                <fullName>3ro</fullName>
            </value>
            <value>
                <fullName>4o</fullName>
            </value>
            <value>
                <fullName>5o</fullName>
            </value>
            <value>
                <fullName>6o</fullName>
            </value>
            <value>
                <fullName>7o</fullName>
            </value>
            <value>
                <fullName>Más de 7</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>