force-app/main/default/objects/AM_Oportunidad__c/fields/AM_Cuota_Mensual_Simulacion1__c.field-meta.xml
<CustomField>
    <fullName>AM_Cuota_Mensual_Simulacion1__c</fullName>
    <label>Cuota Mensual</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>