force-app/main/default/objects/AM_Oportunidad__c/fields/AM_Descuento_aprobado__c.field-meta.xml
<CustomField>
    <fullName>AM_Descuento_aprobado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Descuento aprobado</label>
    <type>Checkbox</type>
</CustomField>