force-app/main/default/objects/AM_Oportunidad__c/fields/AM_Desea_incluir_seguro_de_robo__c.field-meta.xml
<CustomField>
    <fullName>AM_Desea_incluir_seguro_de_robo__c</fullName>
    <label>¿Desea incluir seguro de robo?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Si</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>