force-app/main/default/objects/AM_Oportunidad__c/fields/AM_Devolucion__c.field-meta.xml
<CustomField>
    <fullName>AM_Devolucion__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marca para identificar si la cotización tiene devolución después de ser facturada.</description>
    <label>Devolución</label>
    <type>Checkbox</type>
</CustomField>