force-app/main/default/objects/AM_Oportunidad__c/fields/AM_Dias_trascurridos_para_factura__c.field-meta.xml
<CustomField>
    <fullName>AM_Dias_trascurridos_para_factura__c</fullName>
    <formula>TEXT(AM_Fecha_de_factura__c  - AM_Fecha_creacion_cotizacion_solo_Fecha__c)</formula>
    <label>Dias trascurridos para factura</label>
    <type>Text</type>
</CustomField>