force-app/main/default/objects/AM_Oportunidad__c/fields/AM_Direccion_propietario__c.field-meta.xml
<CustomField>
    <fullName>AM_Direccion_propietario__c</fullName>
    <formula>Owner:User.Street &amp; &quot;, &quot; &amp; Owner:User.City</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dirección propietario</label>
    <type>Text</type>
</CustomField>